<resources>
    <string name="app_name">PraAssesment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="kelas">41-gabungan</string>
    <string name="Nama">Nathanael Fitzgerald</string>
    <string name="Nim">6706174056</string>
    <string name="masukan_lebar_persegi">Masukan Lebar Persegi</string>
    <string name="masukan_panjang_persegi">Masukan Panjang Persegi</string>
    <string name="hitung">Hitung</string>
    <string name="share">Share</string>
    <string name="luas">Luas</string>
    <string name="keliling">Keliling</string>
</resources>
