<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersegiPanjang">

    <EditText
        android:id="@+id/et_panjangPSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_panjang_persegi"
        android:layout_marginTop="50dp"
        android:width="250dp"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/et_lebarPSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_lebar_persegi"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:width="250dp"
        app:layout_constraintTop_toBottomOf="@id/et_panjangPSG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_hitungPSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/et_lebarPSG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_luasPSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luas"
        android:width="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/btn_hitungPSG"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tv_kelilingPSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keliling"
        android:width="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tv_luasPSG"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/btn_sharePSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginTop="50dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_kelilingPSG"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>