<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/tv_nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nim"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nama"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelas"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>